Moving rikudo_shape and rikudo structs to own files.

--- a/Rikudo_Solver/Rikudo_Solver.vcxproj.filters
+++ b/Rikudo_Solver/Rikudo_Solver.vcxproj.filters
@@ -18,12 +18,24 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rikudo_shape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rikudo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Rikudo_Solver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rikudo_shape.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rikudo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
